feat: Add new post

--- a/source/_posts/52.63km，10万步：我用双脚丈量了峨眉山的全程.md
+++ b/source/_posts/52.63km，10万步：我用双脚丈量了峨眉山的全程.md
@@ -9,7 +9,7 @@ categories:
 cover: https://imgu.falnsakura.top/PicGo/2026/01/a547bb7c8f3d61031167ac7aa36d74e3.png
 ---
 > “别人问我为什么要走完全程？我说，山就在那里，而这只有区区五十公里。”
-### 01. 挑战的开始
+### 挑战的开始
 
 起因其实很偶然。在逛“两步路”APP时，无意间发现了一条峨眉山的“VIP路线”（懂的都懂，逃票进山路）。
 ![bdef595bd0dffd3dbced6005d3492656_720.png](https://imgu.falnsakura.top/PicGo/2026/01/7703325839e83d3c99b9b1e343e6d513.png)
@@ -19,7 +19,7 @@ cover: https://imgu.falnsakura.top/PicGo/2026/01/a547bb7c8f3d61031167ac7aa36d74e
 毕竟我都能跑 42.195 的马拉松。
 
 **后来的事实证明：确实“没什么大不了的”。**
-### 02. 身体的勋章
+### 身体的勋章
 
 在开始叙述细节前，先晒出这枚属于我的勋章：
 
@@ -32,9 +32,10 @@ cover: https://imgu.falnsakura.top/PicGo/2026/01/a547bb7c8f3d61031167ac7aa36d74e
 | ![图片1](https://imgu.falnsakura.top/PicGo/2026/01/7f4d85a6d6519d87d86afdac9f602b50.png) | ![image.png](https://imgu.falnsakura.top/PicGo/2026/01/2bcb4f2fc9d0250a0af8445771920390.png) |
 | :------------------------------------------------------------------------------------: | :------------------------------------------------------------------------------------------: |
 |                                    **52.63 km** 轨迹图                                    |                                       **4137 m** 累计爬升                                        |
-<img src="https://imgu.falnsakura.top/PicGo/2026/01/b24f016460db5d411e9cf9f2ba0c6eff.png" style="width: 50%; display: block; margin: 0 auto;">
 
-### 03. 爬升的虐点：永无止境的石阶
+<img src="https://imgu.falnsakura.top/PicGo/2026/01/b24f016460db5d411e9cf9f2ba0c6eff.png" style="width: 70%; display: block; margin: 0 auto;">
+
+### 爬升的虐点：永无止境的石阶
 
 一开始遇到了拦路泼猴，好在被人用弹弓赶走了。
 ![015d387407c886906823f351ecefa58f_720.png](https://imgu.falnsakura.top/PicGo/2026/01/07f4986cc431e309904ee9c07cf80184.png)
@@ -65,7 +66,7 @@ cover: https://imgu.falnsakura.top/PicGo/2026/01/a547bb7c8f3d61031167ac7aa36d74e
 
 ![d5b4d9df486ce4383c173a2b35b75ae9_720.png](https://imgu.falnsakura.top/PicGo/2026/01/cdc52d9b779fba3589ba958eda622006.png)
 
-### 04. 下山是幸福的...呃？
+### 下山是幸福的...呃？
 
 清晨下去的路上全是雾凇，爬上来的时候是晚上，根本看不见。
 这么一看，真美啊。
